--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.21",
+		"postcss-import": "^15.1.0",
+		"postcss-nesting": "^11.2.2",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
