--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@netlify/functions": "^1.4.0",
 		"dotenv": "^16.0.3",
+		"node-fetch": "^3.3.1",
 		"nodemailer": "^6.9.1",
 		"svelte-email": "^0.0.4"
 	}
