--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
   command = "npm run build"
   publish = "build"
 
-[[plugins]]
-  package = "@netlify/plugin-emails"
+[functions]
+  directory = "functions"
   
