--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-netlify": "^2.0.6",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.88",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/nodemailer": "^6.4.7",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
